--- a/Pages/Product/ProductDetail.cshtml
+++ b/Pages/Product/ProductDetail.cshtml
@@ -14,18 +14,21 @@
         <div class="card mt-4">
             <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
             <div class="card-body">
-                <h3 class="card-title">@Model.Product.Name</h3>
+                <h3 class="card-title ">@Model.Product.Name</h3>
                 <h4>R$ @Model.Product.Price</h4>
                 <p class="card-text">@Model.Product.Description</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
                 <span class="text-warning">★ ★ ★ ★ ☆</span>
                 4.0 stars
             </div>
         </div>
 
-        <div class="container">
+        <!-- #region Related  -->
+
+        <div class="container card my-5">
             <h3 class="my-4">Related Projects</h3>
 
-            <div class="row">
+            <div class="row card-body">
 
                 <div class="col-md-3 col-sm-6 mb-4">
                     <a href="#">
@@ -55,30 +58,34 @@
             <!-- /.row -->
 
         </div>
-        </div>
-        <!-- #region Product Review -->
 
-        <div class="card card-outline-secondary my-4">
-            <div class="card-header">
-                Product Reviews
-            </div>
-            <div class="card-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-                <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-                <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-                <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-                <hr>
-                <a href="#" class="btn btn-success">Leave a Review</a>
-            </div>
-        </div>
 
         <!-- #endregion -->
 
     </div>
 
+    <!-- #region Product Review -->
+
+    <div class="card card-outline-secondary my-4">
+        <div class="card-header">
+            Product Reviews
+        </div>
+        <div class="card-body">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <hr>
+            <a href="#" class="btn btn-success">Leave a Review</a>
+        </div>
+    </div>
+
+    <!-- #endregion -->
+
 </div>
+
 
