--- a/Pages/Shared/_SidePanel.cshtml
+++ b/Pages/Shared/_SidePanel.cshtml
@@ -12,7 +12,7 @@
         {
             foreach (var item in lojaVirtualContext.Categories)
             {
-                <a asp-page="/Product/ProductView" asp-page-handler="Populate" asp-route-id="@item.CategoryId" class="dropdown-item">@item.Name</a>
+                <a asp-page="/Product/ProductView" asp-page-handler="Get" asp-route-id="@item.CategoryId" class="dropdown-item">@item.Name</a>
             }
         }
     }
