--- a/Pages/Product/Create.cshtml
+++ b/Pages/Product/Create.cshtml
@@ -5,11 +5,11 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<>Create</>
 
 <h4>Product</h4>
 <hr />
-<div class="row">
+<div h1class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
