--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -6,130 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - LojaVirtual</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/fontawesome/css/all.css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+
+
 </head>
 <body>
     <header>
 
-        <!-- #region NavBar -->
-
-
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">LojaVirtual</a>
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" model="new _LoginPartialModel()" />
-
-                    <ul class="navbar-nav flex-grow-1">
-
-                        <!-- #region Home -->
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <!-- #endregion -->
-                        <!-- #region Categories -->
-                        <li class="nav-item">
-                            <div class="dropdown border-0">
-                                <button class="btn dropdown-toggle nav-link text-dark" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Categorias
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    @{
-                                        using (Models.LojaVirtualContext lojaVirtualContext = new Models.LojaVirtualContext())
-                                        {
-                                            foreach (var item in lojaVirtualContext.Categories)
-                                            {
-                                                <a asp-page="/Product/ProductView" asp-page-handler="Populate" asp-route-id="@item.CategoryId" class="dropdown-item">@item.Name</a>
-                                            }
-                                        }
-                                    }
-                                </div>
-                            </div>
-                        </li>
-                        <!-- #endregion -->
-
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-
-        <!-- #endregion -->
+        @await Html.PartialAsync("_NavBar", new _NavBarModel(new HttpContext()), ViewData)
 
     </header>
 
-    <!-- #region Body -->
+    <!-- #region Carousel -->
+    @await Html.PartialAsync("_Carousel3I", new _Carousel3IModel(), ViewData)
+    <!-- #endregion -->
 
-    <div class="row">
-        <div class="container-fluid">
+    <!-- #region SearchBar -->
+    @await Html.PartialAsync("_SearchBar", new _SearchBarModel(), ViewData)
+    <!-- #endregion -->
 
+    <!-- #region SidePanel - Commented -->
+    @*
+        <div class="row">
+            <div class="container-fluid">
 
-            <!-- #region Page Content -->
+                <!-- #region Page Content -->
+                <div class="row m-2">
 
-            <div class="row m-4">
-                <!-- #region SidePanel -->
-                <div class="col-lg-3">
-                    @*new ViewDataDictionary(this.ViewData) { { "index", "index" } }*@
-                    @await Html.PartialAsync("_SidePanel", new _SidePanelModel(), ViewData)
-                </div>
-                <!-- #endregion -->
-                <!-- #region Carousel -->
-
-                <div class="container">
-                    <div id="carouselExampleIndicators" class="carousel slide my-5 row" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
-                        </ol>
-                        <!-- #region CarouselItem -->
-
-                        <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item">
-                                <img class="d-block img-fluid" src="http://placehold.it/1200x350" alt="First slide">
-                            </div>
-                            <div class="carousel-item active">
-                                <img class="d-block img-fluid" src="http://placehold.it/1200x350" alt="Second slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block img-fluid" src="http://placehold.it/1200x350" alt="Third slide">
-                            </div>
-                        </div>
-
-                        <!-- #endregion -->
-                        <!-- #region Controles -->
-
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-
-                        <!-- #endregion -->
+                    <!-- #region SidePanel -->
+                    <div class="col-lg-3">
+                        @await Html.PartialAsync("_SidePanel", new _SidePanelModel(), ViewData)
                     </div>
-                </div>
+                    <!-- #endregion -->
 
-                <!-- #endregion -->
+                </div>
 
 
             </div>
-
-            <!-- #endregion -->
         </div>
-    </div>
+
+    *@
+
+    <!-- #endregion -->
 
     <!-- #region Body -->
     <div class="container">
-        <main role="main" style="background-color: darkgrey" class="pb-3">
+        <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
@@ -139,10 +63,10 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
     <script defer src="~/fontawesome/js/brands.js"></script>
     <script defer src="~/fontawesome/js/solid.js"></script>
     <script defer src="~/fontawesome/js/fontawesome.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
