--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
             <p  class=" text-dark align-middle m-2">Bem Vindo(a)!  @LoginManagement.TempUser.Name!</p>
         </li>
         <li class="nav-item m-1 row">
-            <a asp-page="/Shopping-Cart/ShoppingCart" asp-page-handler="Get" class="nav-link text-dark" >
+            <a asp-page="/Shopping-Cart/ShoppingCart" asp-page-handler="" class="nav-link text-dark" >
                 <span style="font-size: 1em;">
                     <i class="fas fa-shopping-cart"></i>
                 </span>
