--- a/Pages/User/Login.cshtml
+++ b/Pages/User/Login.cshtml
@@ -12,7 +12,6 @@
             <form method="post" role="form" class="form-horizontal">
                 @Html.AntiForgeryToken()
 
-                <h4>Use a local account to log in.</h4>
                 <hr />
 
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -36,7 +35,8 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <button asp-page-handler="LogIn" class="btn btn-default">Log in</button>
+                        @* todo: Localização *@
+                        <button asp-page-handler="LogIn" class="btn btn-default">Acessar</button>
                     </div>
                 </div>
             </form>
