--- a/Pages/User/Register.cshtml
+++ b/Pages/User/Register.cshtml
@@ -4,5 +4,42 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>Register</h1>
+<h1>Cadastrar Usuário</h1>
 
+<hr />
+<div h1class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="ModelUser.Name" class="control-label"></label>
+                <input asp-for="ModelUser.Name" class="form-control" />
+                <span asp-validation-for="ModelUser.Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ModelUser.Password" class="control-label"></label>
+                <input type="password" asp-for="ModelUser.Password" class="form-control" />
+                <span asp-validation-for="ModelUser.Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                @{ 
+                if (LoginManagement.IsLogged)
+                {
+                    <label asp-for="ModelUser.IsAdmin" class="control-label"></label>
+                    <input type="checkbox" asp-for="ModelUser.IsAdmin" class="form-control" />
+                    <span asp-validation-for="ModelUser.IsAdmin" class="text-danger"></span>
+                }
+                }
+
+            </div>
+            <div class="form-group">
+                @*todo:  Localização*@
+                <input type="submit" value="Cadastrar" class="btn btn-primary" />
+            </div>
+        </form>
+
+        <div>
+            <button onclick="history.go(-1);" class="btn btn-primary"> Voltar</button>
+        </div>
+    </div>
+</div>
