Iterable Image Input Product Razor Form (Bug)

--- a/Pages/Product/Details.cshtml
+++ b/Pages/Product/Details.cshtml
@@ -1,11 +1,12 @@
 ﻿@page
-@model LojaVirtual.DetailsModel
+@model LojaVirtual.Pages.Product.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "_ManagementLayout";
 }
 
-<h1>Details</h1>
+<h1>Visualizar</h1>
 
 <div>
     <h4>Product</h4>
