--- a/Pages/Product/Edit.cshtml
+++ b/Pages/Product/Edit.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
-@model LojaVirtual.EditModel
+@model LojaVirtual.Pages.Product.EditModel
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "_ManagementLayout";
 }
 
 <h1>Edit</h1>
