--- a/Pages/Product/Shared/_PartialTest.cshtml
+++ b/Pages/Product/Shared/_PartialTest.cshtml
@@ -1,7 +1,10 @@
-﻿@page
-@model LojaVirtual._PartialTestModel
+﻿
+@model LojaVirtual.Pages.Product.Shared._PartialTestModel
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-<h1>Partial Test</h1>
+    <div  class="custom-file">
+        <input name="laga" type="file" class="custom-file-input" id="customFile">
+        <label class="custom-file-label" for="customFile">Choose file</label>
+    </div>
