--- a/Pages/User/Login.cshtml
+++ b/Pages/User/Login.cshtml
@@ -36,7 +36,7 @@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         @* todo: Localização *@
-                        <button asp-page-handler="LogIn" class="btn btn-default">Acessar</button>
+                        <button asp-page-handler="LogIn" class="btn btn-primary">Acessar</button>
                     </div>
                 </div>
             </form>
