--- a/Pages/Product/Delete.cshtml
+++ b/Pages/Product/Delete.cshtml
@@ -1,13 +1,14 @@
 ﻿@page
-@model LojaVirtual.DeleteModel
+@model LojaVirtual.Pages.Product.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "_ManagementLayout";
 }
 
-<h1>Delete</h1>
+<h1>Exclusão</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem Certeza que deseja Deletar?</h3>
 <div>
     <h4>Product</h4>
     <hr />
