--- a/Pages/Product/Index.cshtml
+++ b/Pages/Product/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿@page
-@model LojaVirtual.IndexModel
+@model LojaVirtual.Pages.Product.IndexModel
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "_ManagementLayout";
 }
 
-<h1>Index</h1>
+<h1>Índice</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Novo Produto</a>
 </p>
 <table class="table">
     <thead>
@@ -38,9 +39,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ProductId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ProductId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ProductId">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.ProductId">Editar</a> |
+                <a asp-page="./Details" asp-route-id="@item.ProductId">Visualizar</a> |
+                <a asp-page="./Delete" asp-route-id="@item.ProductId">Deletar</a>
             </td>
         </tr>
 }
