--- a/Pages/Product/Shared/_ProductCard.cshtml
+++ b/Pages/Product/Shared/_ProductCard.cshtml
@@ -6,7 +6,7 @@
 
 <div class="col-lg-4 col-md-6 py-4 px-0" >
     <div class="container">
-        <div class="card-deck flex-row ">
+        <div class="card-deck flex-row m-2">
             <div class="card h-100">
 
                 <a asp-page="/Product/ProductDetail" asp-page-handler="Get" asp-route-id="@Model.Product.ProductId"    class="flex-row" style="color:#000000; text-decoration:none" >
