--- a/Pages/User/Register.cshtml
+++ b/Pages/User/Register.cshtml
@@ -21,14 +21,21 @@
                 <input type="password" asp-for="ModelUser.Password" class="form-control" />
                 <span asp-validation-for="ModelUser.Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                @{ 
-                if (LoginManagement.IsLogged)
-                {
-                    <label asp-for="ModelUser.IsAdmin" class="control-label"></label>
-                    <input type="checkbox" asp-for="ModelUser.IsAdmin" class="form-control" />
-                    <span asp-validation-for="ModelUser.IsAdmin" class="text-danger"></span>
-                }
+            <div class="form-group form-inline">
+                @{
+                    if (LoginManagement.IsLogged)
+                    {
+                        if (LoginManagement.TempUser.IsAdmin)
+                        {
+                            <div class="form-check">
+                                <label asp-for="ModelUser.IsAdmin" class="form-check-label"></label>
+                                <input type="checkbox" asp-for="ModelUser.IsAdmin" class="form-check-input" />
+                                <span asp-validation-for="ModelUser.IsAdmin" class="text-danger"></span>
+
+                            </div>
+                        }
+
+                    }
                 }
 
             </div>
