--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,13 @@
 @using LojaVirtual
+@using System.Threading
+@using LojaVirtual.Pages.Category
+@using LojaVirtual.Pages.Product
+@using LojaVirtual.Pages.User
+@using LojaVirtual.Pages.Payment
+@using LojaVirtual.Pages.Shopping_Cart
+@using Microsoft.AspNetCore.Components
+
+
+
 @namespace LojaVirtual.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
